--- a/TcHmiProject1/Themes/Base/Style.css
+++ b/TcHmiProject1/Themes/Base/Style.css
@@ -43,3 +43,9 @@ html {
 .tchmi-datagrid-template-cell {
     color: #DDDDDD;
 }
+.tchmi-datagrid-template-cell {
+    border-color: #606060;
+}
+.tchmi-datagrid-template-row-numbers {
+    border-color: #909090;
+}
